Pull request #1270: ui fixes
Merge in EXTENSIONS/browser-extension to master

Squashed commit of the following:

commit fd0d02b54e2c5facab1645b4981c16ce9ece8869
Merge: fa0d0c0be f7afd6e0d
Author: Anton <a.kaprielov@adguard.com>
Date:   Fri Jun 17 17:52:21 2022 +0300

    AG-14498 merge

commit fa0d0c0be260ea0b0d6b0f9acbe0c60abf82dfd7
Author: Anton <a.kaprielov@adguard.com>
Date:   Fri Jun 17 11:03:48 2022 +0300

    AG-14498 fix ff ellipsis

commit 8381c700045802a07dbf824f6046ca45a0b70926
Author: Anton <a.kaprielov@adguard.com>
Date:   Wed Jun 15 15:55:41 2022 +0300

    AG-14498 ui fixes

--- a/Extension/src/pages/filtering-log/components/Actions/actions.pcss
+++ b/Extension/src/pages/filtering-log/components/Actions/actions.pcss
@@ -84,6 +84,7 @@
     }
 
     &__refresh-ico {
+        transform: translateY(-1px);
         margin-right: 5px;
     }
 
