--- a/Extension/src/pages/options/components/Filters/FiltersUpdate/filters-update.pcss
+++ b/Extension/src/pages/options/components/Filters/FiltersUpdate/filters-update.pcss
@@ -13,6 +13,7 @@
     }
 
     &__info {
+        flex-shrink: 1;
         font-size: 14px;
         color: var(--gray700);
         display: flex;
@@ -30,6 +31,7 @@
     }
 
     &__btn {
+        flex-shrink: 0;
         min-width: 200px;
     }
 }
