--- a/Extension/src/pages/options/styles/button.pcss
+++ b/Extension/src/pages/options/styles/button.pcss
@@ -133,7 +133,7 @@
         text-align: left;
         min-height: 52px;
         padding: 16px;
-        border-radius: 4px;
+        border-radius: 8px;
         transition: var(--t3) background-color;
 
         @media (prefers-color-scheme: dark) {
