--- a/Extension/src/pages/options/styles/modal.pcss
+++ b/Extension/src/pages/options/styles/modal.pcss
@@ -16,7 +16,10 @@
         margin-bottom: 15px;
 
         &--confirm {
-            max-width: 300px
+            text-overflow: ellipsis;
+            overflow: hidden;
+            max-width: 300px;
+            white-space: nowrap;
         }
     }
 
